--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         </div>
       </section>
 
-      <!-- section2 strat -->
+      <!-- section-2 strat here  -->
       <section class="d-flex align-items-center my-5 mb-5">
         <div class="container">
           <div class="row">
-            <!-- player vard -->
+            <!-- player card start here-->
 
             <div class="col-lg-9 col-md-9 col-sm-12">
               <div class="row">
@@ -240,7 +240,7 @@
                   </div>
                 </div>
 
-                <!-- player card End -->
+                <!-- player card End here -->
               </div>
             </div>
           </div>
